--- a/hi.html
+++ b/hi.html
@@ -3,6 +3,6 @@
     <body bgcolor="skyblue">
         <p><h1><marquee>Welcome to My page</marquee></h1></p>
         <P>Welcome to my page</P>
-        <p>Hi</p>
+        <p>Hi Welcome</p>
     </body>
 </html>
